--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,9 +56,11 @@
                 type: "POST",
                 url: "/ask",
                 data: JSON.stringify({ question: $("#questionInput").val() }),
-                contentType: "application/json; charset=utf-8",
-                dataType: "json",
+                //contentType: "application/json; charset=utf-8",
+                dataType: "text",
                 success: function (data) {
+                    //console.log(typeof data);
+                    //console.log(data);
                     $("#answerBox").val(data);
                 },
                 error: function (errMsg) {
